
                             Kiji Express Release Notes

Version 0.10.0
  * EXP-207. EntityIds can now be accessed from extractors/scorers.
  * EXP-52. Adds support for text file based key-value stores.

Version 0.9.0
  * EXP-105. When writing to a Kiji table using layout < v1.3,
      KijiExpress uses the default reader schema for writing generic
      values to the table.  The user can also specify a writer schema
      using Column("family:qualifier").withSchemaId(12). This schema
      ID can be retrieved from the kiji schema table. See
      WriterSchemaSuite for an example.
  * EXP-105. The DSL syntax for KijiOutput has changed from
      KijiOutput(Map(Column("family:qualifier") -> 'fieldname)) to
      KijiOutput(Map('fieldname -> Column("family:qualifier"))) in
      order to match the syntax for KijiOutput('fieldname -> "fam:qual")

Version 0.8.1
  * EXP-186. Update Scalding version used by KijiExpress. This fixes
      some Scalding bugs in the matrix API.

Version 0.8.0
  * EXP-168. Normalizes the names of modeling Avro classes. The names
      of Avro records for columns and filters have been changed from
      '*Spec' style to 'Avro*' to match other classes and distinguish
      from records like 'AvroInputSpec' (which legitimately should
      end in 'Spec').
  * EXP-160. Extractors can now be configured on the appropriate
      lifecycle phases.
  * EXP-165. All model lifecycle phases are optional.
  * EXP-125. Adds the train phase to model environments.
  * EXP-176. Avoids clobbering mapred.child.java.opts in the express
      script. This will allow users to pick up a value for
      mapred.child.java.opts from mapred-site.xml, or set a value from
      the command line.

Version 0.7.0
  * EXP-162. Environment class now expose case classes as public fields
      instead of Avro classes.
  * EXP-121. Adds support for the prepare phase of the model lifecycle.
  * EXP-87. An EntityId no longer needs to be constructed using a